[package]
name = "wasm-qr"
version = "0.1.0"
authors = ["Ryosuke Sasaki <nu.ciger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
qrcode-generator = "1.0.6"
